--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/spagcarbo.html">Spaguetti Carbonara</a>
-    <a href="recipes/pizza.html">Pizza</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/spagcarbo.html">Spaguetti Carbonara</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+    </ul>
 </body>
 </html>
